# NetworkSniffer

./: .gitignore  CMakeLists.txt  Makefile  README.md  USAGE.md  sniffer  tasks.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  BPF_GUIDE.md  DEVELOPMENT.md  INDEX.md  PROTOCOL.md  USAGE.md  main-cpp-documentation.md  packet-parser-class-documentation.md  sniffer-class-documentation.md
src/: Logger.cpp  MainWindow.cpp  MainWindow.h  PacketParser.cpp  PacketParser.h  Protocol.h  Sniffer.cpp  Sniffer.h  SnifferClient.cpp  SnifferClient.h  main.cpp  server.cpp
src/client/: MainWindow.cpp  MainWindow.h  ModernStyle.h  SnifferClient.cpp  SnifferClient.h  StatsWidget.cpp  StatsWidget.h
src/logging/: Logger.h
src/server/: server.cpp
src/sniffer/: PacketParser.h  Sniffer.cpp  Sniffer.h
tests/: README.md  automated_test_macos.sh  quick_test.sh
